# java-config

./: 1.4  AUTHORS  ChangeLog  EnvFileParser.py  EnvironmentManager.py  Errors.py  JavaErrors.py  JavaExceptions.py  MANIFEST.in  Makefile  NEWS  OutputFormatter.py  Package.py  PreferenceManager.py  PrefsFileParser.py  README  REWRITE  TODO  VM.py  depend-java-query  java-config  java-config.py  jre.env  make-release  meson.build  meson.options  pyproject.toml  run-java-tool  setup.cfg  setup.py  tarball.sh  versionator.py
config/: 20java-config  compilers.conf  jdk-defaults-alpha.conf  jdk-defaults-amd64.conf  jdk-defaults-arm.conf  jdk-defaults-hpux.conf  jdk-defaults-ia64.conf  jdk-defaults-ppc.conf  jdk-defaults-x86.conf  jdk-defaults.conf  jdk.conf  meson.build  symlink-tools  virtuals
data/: javaws.desktop  x-java-jnlp-file.desktop
java_config/: EnvironmentManager.py  __init__.py
man/: java-config-2.1  java-config.1  meson.build
refs/heads/: master
refs/tags/: 2.3.2  2.3.3
src/: EnvironmentManager.py  Errors.py  OutputFormatter.py  Package.py  PreferenceManager.py  PrefsFileParser.py  VM.py  __init__.py  depend-java-query  env  gjl  java-config  java-config-2  java-config-2.profiled  launcher.bash  meson.build  run-java-tool  test-python3.sh  test.sh  test2.sh  versionator.py
src/eselect/: README  java-nsplugin.eselect  java-vm.eselect  java.eselect
src/java_config/: EnvFileParser.py  EnvironmentManager.py  Errors.py  FileParser.py  OutputFormatter.py  Package.py  PreferenceManager.py  PrefsFileParser.py  VM.py  VersionManager.py  Virtual.py  __init__.py  versionator.py
src/java_config_2/: EnvironmentManager.py  Errors.py  FileParser.py  OutputFormatter.py  Package.py  VM.py  VersionManager.py  Virtual.py  __init__.py  meson.build
src/profile.d/: java-config-2.csh  java-config-2.sh
src/test/: provides.py
src/testsuite/: EnvironmentManager.py  Package.py  VM.py  VersionManager.py  Virtual.py  __init__.py
src/testsuite/virtual_configs/: jdbc  jmx
src/testsuite/vm_configs/: blackdown-jdk-1.4.2  ibm-jdk-bin-1.5  sun-jre-bin-1.6
src/testsuite2/: VersionManager.py
src/testsuite2/virtual_configs/: jdk-with-com-sun
tests/: meson.build  run-test-suite.py  run-test-suite2.py  test-python3.sh  test.sh  test2.sh
tests/testsuite/: EnvironmentManager.py  Package.py  VM.py  VersionManager.py  VersionManagerEnv2.py  Virtual.py  __init__.py
tests/testsuite/test_env/usr/share/ant-cores/: package.env
tests/testsuite/test_env/usr/share/java-config-2/vm/: blackdown-jdk-1.4.2  sun-jdk-1.6  sun-jdk-1.7  sun-jre-bin-1.6
tests/testsuite/test_env/usr/share/jdbc-postgresql/: package.env
tests/testsuite/test_env2/usr/share/ant-ivy/: package.env
tests/testsuite/test_env2/usr/share/ant-nodeps/: package.env
tests/testsuite/test_env2/usr/share/commons-vfs/: package.env
tests/testsuite/test_env2/usr/share/jakarta-oro-2.0/: package.env
tests/testsuite/test_env2/usr/share/java-config-2/vm/: icedtea-7  icedtea-bin-6
tests/testsuite/test_env2/usr/share/jzlib/: package.env
tests/testsuite/test_env2/usr/share/xerces-2/: package.env
tests/testsuite/test_env2/usr/share/xml-commons-resolver/: package.env
tests/testsuite/virtual_configs/: jaf  jdbc  jmx2
tests/testsuite/vm_configs/: sun-jdk-1.6
tests/testsuite2/: VersionManager.py  __init__.py
tests/testsuite2/vm_configs/: icedtea-bin-7
trunk/: MANIFEST.in  README
trunk/config/: jdk-defaults-hppa.conf  jdk-defaults-ia64.conf  jdk-defaults-mips.conf
trunk/src/: gjl  run-java-tool
trunk/src/java_config_2/: Errors.py  Package.py  VersionManager.py  Virtual.py
